--- a/ProjekatSpring/src/main/resources/static/styles.css
+++ b/ProjekatSpring/src/main/resources/static/styles.css
@@ -45,7 +45,7 @@ legend {
     color: white;
     padding: 14px 18px;
 }
-  
+
 #navigation-bar-reg a:hover {
     background-color: red;
 }
@@ -187,6 +187,17 @@ option {
 
 #reg:hover {
     color: rgb(192, 191, 191);
+}
+
+#quote {
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #to-center {
