--- a/ProjekatSpring/src/main/resources/static/styles.css
+++ b/ProjekatSpring/src/main/resources/static/styles.css
@@ -208,7 +208,7 @@ option {
     border: 2px solid rgb(172, 171, 171);
 }
 
-table {
+#treneri {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
@@ -236,4 +236,15 @@ tr:nth-child(odd) {
 
 tr:nth-child(even) { 
     background-color: rgb(172, 171, 171); 
+}
+
+#termini {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    margin-left: 5%;
+    margin-right: auto;
+    border-spacing: 0;
+    width: 90%;
+    border: 3px solid red;
 }
