--- a/ProjekatSpring/src/main/resources/static/styles.css
+++ b/ProjekatSpring/src/main/resources/static/styles.css
@@ -208,7 +208,7 @@ option {
     border: 2px solid rgb(172, 171, 171);
 }
 
-#treneri {
+.prikaz {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
@@ -218,8 +218,9 @@ option {
     transform: translate(-50%, -50%);
     margin-left: auto;
     margin-right: auto;
+    border-width: 0px;
     border-spacing: 0;
-    width: 60%;
+    width: 70%;
     border: 3px solid red;
 }
 
