--- a/ProjekatSpring/src/main/resources/static/style2.css
+++ b/ProjekatSpring/src/main/resources/static/style2.css
@@ -13,126 +13,19 @@ body {
     font-family: sans-serif;
 }
 
-#navigation-bar-log {
+#termini {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin: auto;
-    background-color: red;
-    overflow: hidden;
-    border-bottom: 5px solid red;
-    border-left: 5px solid red;
-    border-right: 5px solid red;
-}
-  
-#navigation-bar-log a {
-    text-decoration: none;
-    float: left;
-    color: white;
-    padding: 14px 18px;
-}
-  
-#navigation-bar-log a:hover {
-    border-bottom: 2px solid rgb(192, 191, 191);
+    margin-right: auto;
+    border-spacing: 0;
+    border: 3px solid red;
 }
 
-.card {
-    color: white;
-    background-image: url(../static/Pictures/pic1.jpg);
-    background-size: cover; 
-    padding: 10rem 0 0;
-    max-width: 50ch;
-    border-radius: 0.5em;
-    overflow: hidden;
-
-    
-    transition: transform 500ms ease;
+tr:nth-child(odd) { 
+    background-color: rgb(192, 191, 191); 
 }
 
-.card-content > *:not(.card-title) {
-    opacity: 0;
-    transition: opacity 500ms linear;
-}
-
-.card:hover {
-    transform: scale(1.07);
-}
-
-.card-content {
-    --padding: 1.5rem;
-    padding: var(--padding);
-    background: linear-gradient(
-        hsl(0 0% 0% / 0),
-        hsl(20 0% 0% / 0.3) 20%,
-        hsl(0 0% 0% / 1)
-    );
-    transform: translateY(70%);
-    transition: transform 500ms ease;
-}
-
-.card:hover .card-content {
-    transform: translateX(0);
-    transition-delay: 500ms;
-}
-
-.card:hover .card-content > *:not(.card-title) {
-    opacity: 1;
-    transition-delay: 1000ms;
-}
-
-.card-title {
-    position: relative;
-    width: max-content;
-    max-width: 100%;
-}
-
-.card-title::after {
-    content: "";
-    position: absolute;
-    height: 4px;
-    background: red;
-    width: 100%;
-    left: calc(var(--padding) * -1);
-    bottom: 0;
-    width: calc(var(--padding) + 100%);
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 500ms ease;
-} 
-
-.card:hover .card-title::after {
-    transform: scaleX(1);
-}
-
-.button {
-    cursor: pointer;
-    display: inline;
-    text-decoration: none;
-    color:black;
-    background-color: red;
-    padding: 0.5em 1.25em;
-    border-radius: 0.25em;
-}
-
-.button:hover {
-    background-color: rgb(192, 191, 191);
-}
-
-#log {
-    text-decoration: none;
-    color: rgb(172, 171, 171);
-}
-
-#log:hover {
-    color: rgb(192, 191, 191);
-}
-
-.button1 {
-    position: absolute; 
-    top: 15px; 
-    right: 15px;
+tr:nth-child(even) { 
+    background-color: rgb(172, 171, 171); 
 }
