--- a/ProjekatSpring/src/main/resources/static/style2.css
+++ b/ProjekatSpring/src/main/resources/static/style2.css
@@ -13,13 +13,21 @@ body {
     font-family: sans-serif;
 }
 
-#termini {
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    position: absolute;
-    margin-right: auto;
-    border-spacing: 0;
-    border: 3px solid red;
+#navigation-bar-reg {
+    background-color: rgb(192, 191, 191);
+    overflow: hidden;
+    border-bottom: 5px solid red;
+  }
+  
+#navigation-bar-reg a {
+    text-decoration: none;
+    float: left;
+    color: white;
+    padding: 14px 18px;
+}
+
+#navigation-bar-reg a:hover {
+    background-color: red;
 }
 
 tr:nth-child(odd) { 
@@ -29,3 +37,15 @@ tr:nth-child(odd) {
 tr:nth-child(even) { 
     background-color: rgb(172, 171, 171); 
 }
+
+#termini {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    margin-left: 20%;
+    margin-right: auto;
+    border-spacing: 0;
+    width: 60%;
+    border: 3px solid red;
+}
+
